<resources>
    <string name="app_name">Moon Store</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_moonstore_app">Welcome to the Moon Store 🌒</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You can enable your location for a full map experience.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofence_added">Geofence added.</string>
    <string name="geofence_not_added">Problem in adding geofence.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="login_lbl">Login</string>
    <string name="confirm_point_of_interest">Confirm point of interest</string>
    <string name="discard">Discard</string>
    <string name="title_lbl">Title:</string>
    <string name="description_lbl">Description</string>
    <string name="location_lbl">Location:</string>
    <string name="my_favorites">My Favorites</string>
    <string name="all_items">All Items</string>
    <string name="filter_display">Filter Display</string>
    <string name="settings_label">Settings</string>
    <string name="settings_stock_description">Notification of your favorite items stock on store pass-by</string>
    <string name="stock_notif_proposal_msg">Hi, we have a feature that allows you to receive notifications when you pass by a store that has stock of your favorite items! would you like to enable it?</string>
    <string name="stock_notif_proposal_title">Activate Notifications</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stock_notif_later_msg"><![CDATA[No problem, you can always turn it on in sidemenu -> settings if you change your mind, happy shopping!]]></string>
    <string name="ok">Ok</string>
    <string name="your_settings">Your Settings</string>
    <string name="notif_on">Notifications for favorite items is on</string>
    <string name="price_label">Price:</string>
    <string name="name_label">Name:</string>
    <string name="stores_with_stock_label">Stores with stock:</string>
    <string name="how_notifications_work">How our pass-by notifications work</string>
    <string name="settings_notification_long_explanation">Everytime you pass by a store that has one of your favorite items in stock, we will send you a notification to your phone, so that you can have the opportunity to buy the items you want without having to always remember to go check it by yourself! We want to make shopping an easier experience for you, so you can focus on having fun only 🌒</string>
    <string name="notification_screen_description">Hey, your favorite items are in stock in a store nearby! Go in and check it out, it is now your opportunity to buy it!\n Happy Shopping! 🌒</string>
    <string name="store_lbl">Store:</string>
</resources>
